unpackaged/main/default/objects/Email_Signature__mdt/Email_Signature__mdt.object-meta.xml
<CustomObject>
    <description>Stores email signature templates with HTML and plain text versions</description>
    <label>Email Signature</label>
    <pluralLabel>Email Signatures</pluralLabel>
</CustomObject>