unpackaged/main/default/objects/Email_Signature__mdt/fields/HTML_Signature__c.field-meta.xml
<CustomField>
    <fullName>HTML_Signature__c</fullName>
    <description>HTML version of the signature. Use {!User.FieldName} for user fields.</description>
    <label>HTML Signature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>