unpackaged/main/default/objects/Email_Signature__mdt/fields/Include_Social_Links__c.field-meta.xml
<CustomField>
    <fullName>Include_Social_Links__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, includes social media links from Organization settings</description>
    <label>Include Social Links</label>
    <type>Checkbox</type>
</CustomField>