unpackaged/main/default/objects/Email_Signature__mdt/fields/Plain_Text_Signature__c.field-meta.xml
<CustomField>
    <fullName>Plain_Text_Signature__c</fullName>
    <description>Plain text version of the signature. Use {!User.FieldName} for user fields.</description>
    <label>Plain Text Signature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>