unpackaged/main/default/objects/Email_Signature__mdt/fields/Profile_Filter__c.field-meta.xml
<CustomField>
    <fullName>Profile_Filter__c</fullName>
    <description>Comma-separated list of Profile Names that should use this signature. Leave blank for all profiles.</description>
    <label>Profile Filter</label>
    <type>TextArea</type>
</CustomField>